unpackaged/main/default/objects/Coupon_Co_Invest__c/Coupon_Co_Invest__c.object-meta.xml
<CustomObject>
    <description>EPH-7253 Object: Coupon Co-Invest</description>
    <label>Coupon Co-Invest</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Coupon Co-Invest ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Co-Invests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>