unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF( RecordType.DeveloperName = &#39;Coupon_Co_Invest_Pop&#39;, Category_Tree__r.Name, Coupon_Category__r.Category__r.Name)</formula>
    <label>eBay Category Name</label>
    <type>Text</type>
</CustomField>