unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Category_ID__c</fullName>
    <description>EPH-7486 Add Category ID to Object: Coupon Co-Invest</description>
    <formula>IF( RecordType.DeveloperName = &#39;Coupon_Co_Invest_Pop&#39;, Category_Tree__r.Category_ID__c, Coupon_Category__r.Category__r.Category_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category ID</label>
    <type>Text</type>
</CustomField>