unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Category_Label__c.field-meta.xml
<CustomField>
    <fullName>Category_Label__c</fullName>
    <description>US-0010438</description>
    <formula>&#39;Home&#39; + IF( !ISBLANK(Coupon_Category__r.Category__r.Note_ID__c) , 
 &#39; &gt; &#39;+ Coupon_Category__r.Category__r.Note_ID__r.Name, &#39;&#39;) + IF( !ISBLANK(Coupon_Category__r.Category__c) , &#39; &gt; &#39; + Coupon_Category__r.Category__r.Name , &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Name</label>
    <type>Text</type>
</CustomField>