unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Category_Level__c.field-meta.xml
<CustomField>
    <fullName>Category_Level__c</fullName>
    <description>EPH-7253 Object: Coupon Co-Invest</description>
    <formula>IF (RecordType.DeveloperName = &#39;Coupon_Co_Invest_Pop&#39;, Category_Tree__r.Level__c,Coupon_Category__r.Category_Level__c)</formula>
    <label>Category Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>