unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Category_Refreshed_Date__c.field-meta.xml
<CustomField>
    <fullName>Category_Refreshed_Date__c</fullName>
    <description>US-0007256 POP COUPON - ETL - BATCH CREATE COUPON SELLER L3, this field will be populated by the ETL process. Generated as: &lt;CouponName&gt;-&lt;CategoryTree_External_Id&gt;</description>
    <inlineHelpText>The last date when the number of Live Listings was updated for the category.</inlineHelpText>
    <label>Category Refreshed Date</label>
    <type>Date</type>
</CustomField>