unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Category_Tree__c.field-meta.xml
<CustomField>
    <fullName>Category_Tree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0009657 - [ETL] POP Coupon: flow for creating co invests</description>
    <inlineHelpText>Category id for POP coupon co-invest</inlineHelpText>
    <label>Category Tree</label>
    <referenceTo>Category_Tree__c</referenceTo>
    <relationshipLabel>Coupon Co-Invests</relationshipLabel>
    <relationshipName>Coupon_Co_Invests</relationshipName>
    <type>Lookup</type>
</CustomField>