unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Co_Invest__c.field-meta.xml
<CustomField>
    <fullName>Co_Invest__c</fullName>
    <description>EPH-7253 Object: Coupon Co-Invest</description>
    <label>Seller Share %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>