unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Contra__c.field-meta.xml
<CustomField>
    <fullName>Contra__c</fullName>
    <description>[#EPH-7796] New finacial fields for Coupon Seller &amp; Coupon Co-Invest Record record</description>
    <inlineHelpText>Coupon Contra in USD Plan Rate</inlineHelpText>
    <label>Contra USD (Payout)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>