unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Contra_LC__c.field-meta.xml
<CustomField>
    <fullName>Contra_LC__c</fullName>
    <description>[#EPH-7796] New finacial fields for Coupon Seller &amp; Coupon Co-Invest Record record</description>
    <inlineHelpText>Coupon Contra in Local Currency</inlineHelpText>
    <label>Contra LC (Payout)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>