unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Contra_LC_Non_Payout__c.field-meta.xml
<CustomField>
    <fullName>Contra_LC_Non_Payout__c</fullName>
    <description>EPH-7408 Coupon ETL (From DW to Coupon Seller &amp; Co-Invest Record record)</description>
    <label>Contra LC (Non-Payout)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>