unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Cost_Share_Seller__c.field-meta.xml
<CustomField>
    <fullName>Cost_Share_Seller__c</fullName>
    <description>[#EPH-7796] New finacial fields for Coupon Seller &amp; Coupon Co-Invest Record record</description>
    <formula>Co_Invest__c *  Contra__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as (Seller Share %) * (Contra USD (Payout))</inlineHelpText>
    <label>Cost Share Seller (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>