unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Coupon_Category__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7253 Object: Coupon Co-Invest</description>
    <label>Category Name</label>
    <referenceTo>Coupon_Category__c</referenceTo>
    <relationshipLabel>Coupon Co-Invests</relationshipLabel>
    <relationshipName>Coupon_Co_Invests</relationshipName>
    <type>Lookup</type>
</CustomField>