unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <description>0007214</description>
    <formula>Coupon_Name__r.Coupon_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Code</label>
    <type>Text</type>
</CustomField>