unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Coupon_Currency_Code_h__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Currency_Code_h__c</fullName>
    <description>07195 - Coupon Co-Invest records creation is causing System.LimitException: Too many SOQL queries: 101 error</description>
    <formula>TEXT(Coupon_Name__r.CurrencyIsoCode)</formula>
    <label>Coupon Currency Code</label>
    <type>Text</type>
</CustomField>