unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Coupon_Discount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount__c</fullName>
    <description>US-0018713 [AU] Coupon Click Contract Templates to be sent to AU Sellers</description>
    <formula>Coupon_Name__r.Coupon_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Discount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>