unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Coupon_Seller__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7253 Object: Coupon Co-Invest</description>
    <label>Coupon Seller</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <errorMessage>if Coupon Co-Invests is POP, then coupon seller must be pop</errorMessage>
        <filterItems>
            <field>Coupon_Seller__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pop Coupon Seller</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pop Coupon Co-Invest</value>
        </filterItems>
        <filterItems>
            <field>Coupon_Seller__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Pop Coupon Seller</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Pop Coupon Co-Invest</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Coupon_Seller__c</referenceTo>
    <relationshipLabel>Coupon Co-Invests</relationshipLabel>
    <relationshipName>Coupon_Co_Invests</relationshipName>
    <type>Lookup</type>
</CustomField>