unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Coupon_Seller_Stage__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Seller_Stage__c</fullName>
    <formula>TEXT(Coupon_Seller__r.Coupon_Seller_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Seller Stage</label>
    <type>Text</type>
</CustomField>