unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/eBayFunding__c.field-meta.xml
<CustomField>
    <fullName>eBayFunding__c</fullName>
    <description>US-0005984, AU Coupon Approval Email Notification to Category Growth Manager</description>
    <formula>(IF(ISNULL(Coupon_Discount__c), 0, Coupon_Discount__c) - IF(ISNULL(Seller_Funding__c), 0, Seller_Funding__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eBay Funding %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>