unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/EBH_Owner__c.field-meta.xml
<CustomField>
    <fullName>EBH_Owner__c</fullName>
    <description>(EPH-7591) Add new field Owner to Coupon Seller Object and Coupon Co-Invest Object</description>
    <formula>HYPERLINK(&quot;/&quot; +  Coupon_Seller__r.EBH_CouponSellerOwner__c,  Coupon_Seller__r.EBH_CouponSellerOwner__r.FirstName + &quot; &quot; + Coupon_Seller__r.EBH_CouponSellerOwner__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>