unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/External_Id_conivest__c.field-meta.xml
<CustomField>
    <fullName>External_Id_conivest__c</fullName>
    <description>US-0007256 POP COUPON - ETL - BATCH CREATE COUPON SELLER L3, this field will be populated by the ETL process. Generated as: &lt;CouponSelellerName&gt;-&lt;CategoryTree_External_Id&gt;</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>