unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/isNotManualCreated__c.field-meta.xml
<CustomField>
    <fullName>isNotManualCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0015718 Coupon - Allow Coupon Owner to add Category Exceptions</description>
    <label>isNotManualCreated</label>
    <type>Checkbox</type>
</CustomField>