unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <description>EPH-7631
Coupon Seller related list - Coupon Co-Invest</description>
    <formula>IF( Coupon_Name__r.RecordType.DeveloperName  = &#39;Category_Based&#39;,  Category__c ,  Item_ID__c )</formula>
    <label>Item/Category</label>
    <type>Text</type>
</CustomField>