unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_ID__c</fullName>
    <description>EPH-7253 Object: Coupon Co-Invest</description>
    <label>Item ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>