unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Item_Title__c.field-meta.xml
<CustomField>
    <fullName>Item_Title__c</fullName>
    <description>US-0010892</description>
    <label>Item Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>