unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Live_Listings__c.field-meta.xml
<CustomField>
    <fullName>Live_Listings__c</fullName>
    <description>US-0007256 POP COUPON - ETL - BATCH CREATE COUPON SELLER L3, this field will be populated by the ETL process. Generated as: &lt;CouponName&gt;-&lt;CategoryTree_External_Id&gt;</description>
    <inlineHelpText>Number of Live Listings in related Category on date of record creation.</inlineHelpText>
    <label>Live Listings (Snapshot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>