unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Payout_Sold_Items__c.field-meta.xml
<CustomField>
    <fullName>Payout_Sold_Items__c</fullName>
    <description>[#EPH-7796] New finacial fields for Coupon Seller &amp; Coupon Co-Invest Record record</description>
    <label>Sold Items (Payout)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>