unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7253 Object: Coupon Co-Invest</description>
    <label>Seller Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coupon Co-Invests</relationshipLabel>
    <relationshipName>Coupon_Co_Invests</relationshipName>
    <type>Lookup</type>
</CustomField>