unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Seller_Share_P_h__c.field-meta.xml
<CustomField>
    <fullName>Seller_Share_P_h__c</fullName>
    <description>07195 - Coupon Co-Invest records creation is causing System.LimitException: Too many SOQL queries: 101 error</description>
    <formula>Coupon_Seller__r.SellerShareHolder__c</formula>
    <label>Seller Share P</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>