unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>EPH-7253 Object: Coupon Co-Invest</description>
    <formula>IF( RecordType.DeveloperName = &#39;Coupon_Co_Invest_Pop&#39;, Category_Tree__r.Site__c, Coupon_Category__r.Category_Site_ID__c)</formula>
    <label>Site</label>
    <type>Text</type>
</CustomField>