unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Sold_Items__c.field-meta.xml
<CustomField>
    <fullName>Sold_Items__c</fullName>
    <description>[#EPH-7796] New finacial fields for Coupon Seller &amp; Coupon Co-Invest Record record</description>
    <inlineHelpText>Sold Items with Coupon</inlineHelpText>
    <label>Sold Items (Total)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>