unpackaged/main/default/objects/Coupon_Co_Invest__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>US-0007195 - Coupon Co-Invest records creation is causing System.LimitException: Too many SOQL queries: 101 error</description>
    <formula>Coupon_Seller__c+IF(ISBLANK(Coupon_Category__c),&#39;&#39;,&#39;-&#39;+Coupon_Category__c)+IF(ISBLANK(Item_ID__c),&#39;&#39;,&#39;-&#39;+Item_ID__c)</formula>
    <label>Unique_Key</label>
    <type>Text</type>
</CustomField>