unpackaged/main/default/objects/Coupon_Co_Invest__c/recordTypes/Coupon_Co_Invest_Category.recordType-meta.xml
<RecordType>
    <fullName>Coupon_Co_Invest_Category</fullName>
    <active>true</active>
    <label>Coupon Co-Invest Category</label>
</RecordType>