unpackaged/main/default/objects/Coupon_Co_Invest__c/recordTypes/Coupon_Co_Invest_Item.recordType-meta.xml
<RecordType>
    <fullName>Coupon_Co_Invest_Item</fullName>
    <active>true</active>
    <label>Coupon Co-Invest Item</label>
</RecordType>