unpackaged/main/default/objects/Coupon_Co_Invest__c/recordTypes/Coupon_Co_Invest_Pop.recordType-meta.xml
<RecordType>
    <fullName>Coupon_Co_Invest_Pop</fullName>
    <active>true</active>
    <label>Pop Coupon Co-Invest</label>
</RecordType>