unpackaged/main/default/objects/Coupon_Co_Invest__c/recordTypes/Coupon_Co_Invest_Seller.recordType-meta.xml
<RecordType>
    <fullName>Coupon_Co_Invest_Seller</fullName>
    <active>true</active>
    <label>Coupon Co-Invest Seller</label>
</RecordType>