unpackaged/main/default/objects/Coupon_Co_Invest__c/validationRules/Block_ETL_Update_post_coupon_closure.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_ETL_Update_post_coupon_closure</fullName>
    <active>true</active>
    <description>Transactional report is generated and attached to coupon seller. Block record field updates after status was changed to any other except New.</description>
    <errorConditionFormula>AND( 
  OR(ISPICKVAL( Coupon_Seller__r.Coupon_Seller_Stage__c , &#39;T34 Statement Send&#39;), ISPICKVAL(Coupon_Seller__r.Coupon_Seller_Stage__c , &#39;Invoice paid&#39;)),
  OR(
        ISCHANGED( GMV__c ),
	ISCHANGED( Contra_LC__c ),
	ISCHANGED( Contra__c ),
	ISCHANGED( Non_Payout_Sold_Items__c ),
	ISCHANGED( GMV_LC_Non_Payout__c ),
	ISCHANGED( GMV_USD_Non_Payout__c ),
	ISCHANGED( Contra_LC_Non_Payout__c ),
	ISCHANGED( Contra_USD_Non_Payout__c )
  )
)</errorConditionFormula>
    <errorMessage>You cannot change financial details post coupon closure.</errorMessage>
</ValidationRule>