unpackaged/main/default/objects/Coupon_Co_Invest__c/validationRules/EPH7923_Validate_Item_ID_format.validationRule-meta.xml
<ValidationRule>
    <fullName>EPH7923_Validate_Item_ID_format</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISBLANK(Item_ID__c),
not(REGEX( Item_ID__c , &quot;[0-9]{9,16}&quot;))
)</errorConditionFormula>
    <errorMessage>The item ID you tried to add  is in wrong format or not an item Id.</errorMessage>
</ValidationRule>