unpackaged/main/default/objects/Coupon_Co_Invest__c/listViews/All_Coupon_Co_Invest.listView-meta.xml
<ListView>
    <fullName>All_Coupon_Co_Invest</fullName>
    <columns>Coupon_Name__c</columns>
    <columns>Seller_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Co_Invest__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coupon_Name__c</field>
        <operation>equals</operation>
        <value>C-000138</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coupon_Co_Invest__c.Coupon_Co_Invest_Category</value>
    </filters>
    <filters>
        <field>Seller_Name__c</field>
        <operation>contains</operation>
        <value>smallbug</value>
    </filters>
    <label>All Coupon Co-Invest</label>
</ListView>