unpackaged/main/default/objects/Coupon_Co_Invest__c/listViews/Coupon_Co_Invest_Item_Based.listView-meta.xml
<ListView>
    <fullName>Coupon_Co_Invest_Item_Based</fullName>
    <columns>Coupon_Name__c</columns>
    <columns>Coupon_Seller__c</columns>
    <columns>Seller_Name__c</columns>
    <columns>NAME</columns>
    <columns>Item_ID__c</columns>
    <columns>Co_Invest__c</columns>
    <columns>EBH_Owner__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coupon_Name__c</field>
        <operation>equals</operation>
        <value>C-000371</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coupon_Co_Invest__c.Coupon_Co_Invest_Category</value>
    </filters>
    <label>Coupon Co-Invest</label>
</ListView>